--- a/5/index.html
+++ b/5/index.html
@@ -7,6 +7,10 @@
   <title>Document</title>
 </head>
 <body>
-  <h1>Index page</h1>
+  <h1>Form</h1>
+  <form method="post">
+    <input type="text" name="username">
+    <button type="submit">send</button>
+  </form>
 </body>
 </html>
